--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Araf Latif - Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="#">Araf Latif</a>
+            <a class="navbar-brand" href="#">AL</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
@@ -24,79 +26,103 @@
         </div>
     </nav>
 
-    <header class="bg-primary text-white text-center py-5">
+    <header class="bg-primary text-white text-center">
         <div class="container">
             <h1 class="display-4">Araf Latif</h1>
             <p class="lead">Web Developer | Software Engineer | Creative Problem Solver</p>
+            <a href="#contact" class="btn btn-light btn-lg mt-3">Get in Touch</a>
         </div>
     </header>
 
     <main class="container my-5">
-        <!-- About Section -->
         <section id="about" class="mb-5">
-            <h2 class="mb-3">About Me</h2>
-            <p>I'm a passionate developer with expertise in various programming languages and web technologies. My skills include:</p>
-            <ul class="list-unstyled">
-                <li>Python</li>
-                <li>C</li>
-                <li>Java</li>
-                <li>HTML, CSS, JavaScript</li>
-                <li>Bootstrap</li>
-            </ul>
+            <h2 class="section-title">About Me</h2>
+            <p class="lead">I'm a passionate developer with a knack for creating innovative solutions. My journey in tech is driven by curiosity and a desire to make a positive impact through code.</p>
         </section>
 
-        <!-- Projects Section -->
-        <section id="projects" class="mb-5">
-            <h2 class="mb-3">My Projects</h2>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <!-- Project 1 -->
-                <div class="col">
-                    <div class="card h-100 shadow-sm">
-                        <div class="card-body">
-                            <h5 class="card-title">Bin Genius</h5>
-                            <p class="card-text">A smart waste management solution.</p>
-                            <a href="https://devpost.com/software/bin-genius" class="btn btn-primary" target="_blank">View Project</a>
-                        </div>
+        <section id="skills" class="mb-5">
+            <h2 class="section-title">Skills</h2>
+            <div class="row">
+                <div class="col-md-4 mb-3">
+                    <div class="skill-card">
+                        <i class="fab fa-python fa-3x mb-3"></i>
+                        <h3>Python</h3>
                     </div>
                 </div>
-                <!-- Project 2 -->
-                <div class="col">
-                    <div class="card h-100 shadow-sm">
-                        <div class="card-body">
-                            <h5 class="card-title">MavsHub</h5>
-                            <p class="card-text">An innovative platform for university students.</p>
-                            <a href="https://devpost.com/software/mavshub" class="btn btn-primary" target="_blank">View Project</a>
-                        </div>
+                <div class="col-md-4 mb-3">
+                    <div class="skill-card">
+                        <i class="fas fa-code fa-3x mb-3"></i>
+                        <h3>C</h3>
                     </div>
                 </div>
-                <!-- Project 3 -->
-                <div class="col">
-                    <div class="card h-100 shadow-sm">
-                        <div class="card-body">
-                            <h5 class="card-title">CryptoScrapper</h5>
-                            <p class="card-text">A tool for scraping cryptocurrency data.</p>
-                            <a href="https://github.com/ARAFLATIF/CRYPTOSCRAPPER" class="btn btn-primary" target="_blank">View Project</a>
-                        </div>
+                <div class="col-md-4 mb-3">
+                    <div class="skill-card">
+                        <i class="fab fa-java fa-3x mb-3"></i>
+                        <h3>Java</h3>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="skill-card">
+                        <i class="fab fa-html5 fa-3x mb-3"></i>
+                        <h3>HTML</h3>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="skill-card">
+                        <i class="fab fa-css3-alt fa-3x mb-3"></i>
+                        <h3>CSS</h3>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="skill-card">
+                        <i class="fab fa-js-square fa-3x mb-3"></i>
+                        <h3>JavaScript</h3>
                     </div>
                 </div>
             </div>
+        </section>
 
-            <!-- Hackathons Section -->
+        <section id="projects" class="mb-5">
+            <h2 class="section-title">My Projects</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4" id="project-list">
+                <!-- Project cards will be dynamically inserted here -->
+            </div>
+
             <h3 class="mt-5">Hackathons Participated</h3>
-            <ul class="list-unstyled">
-                <li>HackUNT (2024) - Winner of Robotics Track</li>
-                <li>HackUTA (2024)</li>
+            <ul class="list-group">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    HackUNT (2024)
+                    <span class="badge bg-primary rounded-pill">Winner of Robotics Track</span>
+                </li>
+                <li class="list-group-item">HackUTA (2024)</li>
             </ul>
         </section>
 
-        <!-- Contact Section -->
         <section id="contact" class="mb-5">
-            <h2 class="mb-3">Contact Me</h2>
-            <ul class="list-unstyled">
-                <li>Email: <a href="mailto:araf25420@gmail.com">araf25420@gmail.com</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/araf-latif-51156024a/" target="_blank">Araf Latif's LinkedIn Profile</a></li>
-                <li>GitHub: <a href="https://github.com/ARAFLATIF" target="_blank">Araf Latif's GitHub Profile</a></li>
-            </ul>
+            <h2 class="section-title">Contact Me</h2>
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                    <ul class="list-unstyled contact-list">
+                        <li><i class="fas fa-envelope"></i> <a href="mailto:araf25420@gmail.com">araf25420@gmail.com</a></li>
+                        <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/araf-latif-51156024a/" target="_blank">LinkedIn Profile</a></li>
+                        <li><i class="fab fa-github"></i> <a href="https://github.com/ARAFLATIF" target="_blank">GitHub Profile</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <form id="contact-form">
+                        <div class="mb-3">
+                            <input type="text" class="form-control" id="name" placeholder="Your Name" required>
+                        </div>
+                        <div class="mb-3">
+                            <input type="email" class="form-control" id="email" placeholder="Your Email" required>
+                        </div>
+                        <div class="mb-3">
+                            <textarea class="form-control" id="message" rows="3" placeholder="Your Message" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Send Message</button>
+                    </form>
+                </div>
+            </div>
         </section>
     </main>
 
