--- a/index.html
+++ b/index.html
@@ -2,35 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Araf Latif - Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">AL</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="#">AL</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
 
-    <header class="bg-primary text-white text-center">
-        <div class="container">
-            <h1 class="display-4">Araf Latif</h1>
-            <p class="lead">Web Developer | Software Engineer | Creative Problem Solver</p>
-            <a href="#contact" class="btn btn-light btn-lg mt-3">Get in Touch</a>
+        <div class="hero bg-primary text-white text-center py-5">
+            <div class="container">
+                <h1 class="display-4">Araf Latif</h1>
+                <p class="lead">Web Developer | Software Engineer | Creative Problem Solver</p>
+                <a href="#contact" class="btn btn-light btn-lg mt-3">Get in Touch</a>
+            </div>
         </div>
     </header>
 
@@ -42,38 +44,38 @@
 
         <section id="skills" class="mb-5">
             <h2 class="section-title">Skills</h2>
-            <div class="row">
-                <div class="col-md-4 mb-3">
+            <div class="row row-cols-2 row-cols-md-3 row-cols-lg-6 g-4">
+                <div class="col">
                     <div class="skill-card">
                         <i class="fab fa-python fa-3x mb-3"></i>
                         <h3>Python</h3>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col">
                     <div class="skill-card">
                         <i class="fas fa-code fa-3x mb-3"></i>
                         <h3>C</h3>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col">
                     <div class="skill-card">
                         <i class="fab fa-java fa-3x mb-3"></i>
                         <h3>Java</h3>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col">
                     <div class="skill-card">
                         <i class="fab fa-html5 fa-3x mb-3"></i>
                         <h3>HTML</h3>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col">
                     <div class="skill-card">
                         <i class="fab fa-css3-alt fa-3x mb-3"></i>
                         <h3>CSS</h3>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col">
                     <div class="skill-card">
                         <i class="fab fa-js-square fa-3x mb-3"></i>
                         <h3>JavaScript</h3>
@@ -84,7 +86,7 @@
 
         <section id="projects" class="mb-5">
             <h2 class="section-title">My Projects</h2>
-            <div class="row row-cols-1 row-cols-md-3 g-4" id="project-list">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4" id="project-list">
                 <!-- Project cards will be dynamically inserted here -->
             </div>
 
@@ -100,8 +102,8 @@
 
         <section id="contact" class="mb-5">
             <h2 class="section-title">Contact Me</h2>
-            <div class="row">
-                <div class="col-md-6 mb-4">
+            <div class="row g-4">
+                <div class="col-md-6">
                     <ul class="list-unstyled contact-list">
                         <li><i class="fas fa-envelope"></i> <a href="mailto:araf25420@gmail.com">araf25420@gmail.com</a></li>
                         <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/araf-latif-51156024a/" target="_blank">LinkedIn Profile</a></li>
